@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1332 2003/02/10 02:29:08 grant Exp $
+$NetBSD: CHANGES,v 1.1333 2003/02/11 04:15:30 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -571,3 +571,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated eb to 3.2.3 [cjep 2003-02-08]
 	Updated spamassassin to 2.44nb1 [heinz 2003-02-09]
 	Updated rdesktop to 1.1.0nb1 [grant 2003-02-10]
+	Updated sun-jre13 to 1.0.7nb1 [jlam 2003-02-10]
